// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Array Template renders the custom array template and adds an array 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-array"
    >
      <div
        class="form-group"
      >
        <div
          data-testid="custom-array-template"
        >
          <div
            class="title"
          >
            CustomArrayFieldTest
          </div>
          <p />
          <br />
          <div
            class="array-item element"
          >
            <div
              class="custom-array-template-remove-btn"
            >
              <div
                class="remove-header"
              >
                <h6
                  class="remove-title"
                >
                  <b>
                    CustomArrayFieldTest
                  </b>
                  <span
                    class="element-index-title"
                  >
                    (1 of 2)
                  </span>
                </h6>
                <button
                  class="btn"
                  data-testid="custom-array-template__remove-button--custom-array-field-test"
                  type="button"
                >
                  <span
                    class="remove-button"
                  >
                    <i
                      class="fa-solid fa-circle-minus fa-lg"
                    />
                  </span>
                   
                  <span
                    class="remove-label"
                  >
                     
                    Remove
                  </span>
                </button>
              </div>
              <div
                class="mb-2  d-flex align-items-center row"
              >
                <div
                  class="array-item col-lg-12 col-12"
                  data-testid="custom-array-element"
                >
                  <div
                    class="form-group field field-undefined"
                  >
                    <div
                      class="form-group"
                    >
                      <div
                        class="p-0 container-fluid"
                      >
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-string"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  First Name
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-string"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  Last Name
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-integer"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  Age
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  step="1"
                                  type="number"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="array-item element"
          >
            <div
              class="custom-array-template-remove-btn"
            >
              <div
                class="remove-header"
              >
                <h6
                  class="remove-title"
                >
                  <b>
                    CustomArrayFieldTest
                  </b>
                  <span
                    class="element-index-title"
                  >
                    (2 of 2)
                  </span>
                </h6>
                <button
                  class="btn"
                  data-testid="custom-array-template__remove-button--custom-array-field-test"
                  type="button"
                >
                  <span
                    class="remove-button"
                  >
                    <i
                      class="fa-solid fa-circle-minus fa-lg"
                    />
                  </span>
                   
                  <span
                    class="remove-label"
                  >
                     
                    Remove
                  </span>
                </button>
              </div>
              <div
                class="mb-2  d-flex align-items-center row"
              >
                <div
                  class="array-item col-lg-12 col-12"
                  data-testid="custom-array-element"
                >
                  <div
                    class="form-group field field-undefined"
                  >
                    <div
                      class="form-group"
                    >
                      <div
                        class="p-0 container-fluid"
                      >
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-string"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  First Name
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-string"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  Last Name
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-integer"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  Age
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  step="1"
                                  type="number"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="custom-array-template-add-btn add-header"
            data-testid="custom-array-template-add-btn"
          >
            <button
              class="btn"
              data-testid="custom-array-template__add-button--custom-array-field-test"
              type="button"
            >
              <span
                class="add-button"
              >
                <i
                  class="fa-solid fa-circle-plus fa-lg"
                />
              </span>
               
              <span
                class="add-label"
              >
                Add another
                 
                CustomArrayFieldTest
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Custom Array Template renders the custom array template. 1.) Adds a field 2.) removes the added field 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-array"
    >
      <div
        class="form-group"
      >
        <div
          data-testid="custom-array-template"
        >
          <div
            class="title"
          >
            CustomArrayFieldTest
          </div>
          <p />
          <br />
          <div
            class="custom-array-template-add-btn add-header"
            data-testid="custom-array-template-add-btn"
          >
            <button
              class="btn"
              data-testid="custom-array-template__add-button--custom-array-field-test"
              type="button"
            >
              <span
                class="add-button"
              >
                <i
                  class="fa-solid fa-circle-plus fa-lg"
                />
              </span>
               
              <span
                class="add-label"
              >
                Add
                 
                CustomArrayFieldTest
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;
